--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set-option -g prefix C-u
+bind-key a send-prefix
 
 bind | split-window -h
 bind - split-window -v
@@ -38,6 +39,6 @@ set-option -g status-right-length 90
 set -g status-bg colour195
 set -g status-fg colour52
 
-setw -g utf8 on
-set -g status-utf8 on
+#setw -g utf8 on
+#set -g status-utf8 on
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
