--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,3 +42,4 @@ set -g status-fg colour52
 #setw -g utf8 on
 #set -g status-utf8 on
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+set-option -g default-terminal screen-256color
