--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,8 @@ bind-key v copy-mode \; display "Copy mode!"
 #bind-key -t vi-copy v begin-selection
 
 # Prefix+Enter/y でコピー
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Prefix+p でペースト
 # クリップボードにも保存されているので Cmd-v でもペースト可能
@@ -41,5 +41,5 @@ set -g status-fg colour52
 
 #setw -g utf8 on
 #set -g status-utf8 on
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+set -g default-command ""
 set-option -g default-terminal screen-256color
